--- a/templates/result.html
+++ b/templates/result.html
@@ -11,7 +11,7 @@
 		<div id="brandname">
 			
 		</div>
-		<h2>Sentiment Analysis Web-Application</h2>
+		<h2><center>Sentiment Analysis Web-Application</center></h2>
 		
 	</div>
 	</header>
