--- a/templates/result.html
+++ b/templates/result.html
@@ -19,13 +19,13 @@
 	<div class="results">
 
 
-		
+		<center>
 	{% if prediction == 1%}
 	<h2 style="color:red;">Negative</h2>
 	{% elif prediction == 0%}
 	<h2 style="color:green;">Positive</h2>
 	{% endif %}
-
+</center>
 	</div>
 
 </body>
